--- a/cijene.toml
+++ b/cijene.toml
@@ -1,6 +1,10 @@
 # List of stores to fetch prices from, or "all"
 # See cijeneorg/stores.py for a list of stores
-stores = ['tommy', 'studenac', 'zabac']
+stores = 'all'
 # How much in the past we fetch prices
 # 0 means just today, 1 means today and yesterday, etc.
-days_back = 0
+days_back = 2
+
+
+# we can also pass CIJENEORG_DAYS_BACK and CIJENEORG_STORES environment variable (they override config)
+# stores are separated by commas, no spaces, example: dm,lidl,tommy
