--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,12 @@ services:
     container_name: cijeneorg
     restart: unless-stopped
     env_file: .env
+    environment:
+      - CIJENEORG_DB_PATH=/app/data/cijene.sqlite3
     ports:
       - "16163:16163"
     volumes:
       # instead of copying the entire /archive directory (50+ GB) we just mount it
       - ./archive:/app/archive
+      - ./data:/app/data
     user: "1000:1000"  # uid:gid
