--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "16163:16163"
     volumes:
       # instead of copying the entire /archive directory (50+ GB) we just mount it
+      # SELinux hosts: add :Z to volumes, e.g.  ./data:/app/data:Z
       - ./archive:/app/archive
       - ./data:/app/data
     user: "1000:1000"  # uid:gid
